@@ -10,8 +10,8 @@ project(DDS_Quoter_Connector_idl_gen) : connectoridldefaults {
               -Wb,skel_export_include=Quoter_Connector_svnt_export.h \
               -Wb,svnt_export_macro=QUOTER_CONNECTOR_SVNT_Export \
               -Wb,svnt_export_include=Quoter_Connector_svnt_export.h \
-              -Wb,exec_export_macro=QUOTER_CONNECTOR_EXEC_Export \
-              -Wb,exec_export_include=Quoter_Connector_exec_export.h \
+              -Wb,conn_export_macro=QUOTER_CONNECTOR_CONN_Export \
+              -Wb,conn_export_include=Quoter_Connector_conn_export.h \
               -I ..
 
   IDL_Files {
@@ -91,18 +91,18 @@ project(DDS_Quoter_Connector_exec) : ciao_executor, dds4ccm_impl {
   libpaths += ../lib
   libout = ../lib
   includes += ..
-  dynamicflags   = QUOTER_CONNECTOR_EXEC_BUILD_DLL
+  dynamicflags   = QUOTER_CONNECTOR_CONN_BUILD_DLL
 
   IDL_Files {
   }
 
   Source_Files {
-    Quoter_Connector_exec.cpp
+    Quoter_Connector_conn.cpp
   }
 
   Header_Files {
-    Quoter_Connector_exec.h
-    Quoter_Connector_exec_export.h
+    Quoter_Connector_conn.h
+    Quoter_Connector_conn_export.h
   }
 
   Inline_Files {
