@@ -1,3 +1,12 @@
+Thu Feb 18 15:35:57 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector.mpc:
+          Updated to use tao_idl generation
+
+        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector_exec.cpp:
+        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector_exec.h:
+          Removed from the archive
+
 Thu Feb 18 14:22:29 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/impl/ndds/DataWriterListener.cpp:
